# selenium-v-requests-comparison

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
selenium-v-requests-comparison/: comparison.py
selenium_v_requests_comparison/: comparison.py
tests/: test_comparison.py
