[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selenium_v_requests_comparison"
version = "1.0.0"
requires-python = ">=3.11.9"  # Added Python version requirement
description = "A comparison of performance between Selenium and Requests."
authors = [
    { name = "Joseph McGuire", email = "joseph.c.mcg@gmail.com" }
]
urls = { "Repository" = "https://github.com/joseph-c-mcguire/selenium-v-requests-comparison" }
dependencies = [
    "attrs==25.1.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "fonttools==4.55.8",
    "h11==0.14.0",
    "idna==3.10",
    "iniconfig==2.0.0",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.0",
    "numpy==2.2.2",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "pillow==11.1.0",
    "pluggy==1.5.0",
    "pycparser==2.22",
    "pyparsing==3.2.1",
    "PySocks==1.7.1",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "selenium==4.28.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "trio==0.28.0",
    "trio-websocket==0.11.1",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
    "webdriver-manager==4.0.2",
    "websocket-client==1.8.0",
    "wsproto==1.2.0"
]

[project.scripts]
selenium_v_requests_comparison = "selenium_v_requests_comparison.comparison:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
